# libstreamlike

./: .gitignore  .travis.yml  .ycm_extra_conf.py  Makefile.am  README.md  configure.ac  streamlike.pc.in  travis-install.sh
doc/: Doxyfile  Makefile.am
lib/: Makefile.am  streamlike.h  streamlike_file.c  streamlike_file.h  streamlike_http.c
m4/: .gitignore
src/: Makefile.am  circbuf.c  circbuf.h  streamlike.cpp  streamlike.h  streamlike.hpp  streamlike_debug.h  streamlike_http.c  streamlike_http.h  streamlikexx.cpp
src/streamlike/: buffer.c  buffer.h  buffer.hpp  bufferxx.cpp  circbuf.c  debug.h  file.c  file.h  file.hpp  filexx.cpp  http.c  http.h  http.hpp  httpxx.cpp  test.h
src/streamlike/util/: circbuf.c  circbuf.h
tests/: Makefile.am  check_circbuf.c  check_streamlike_buffer.c  check_streamlike_file.c  check_streamlike_http.c  with_gdb.sh
tests/util/: test_server.c  test_server.h  util.h
